--- a/src/main/resources/static/css/Estilos.css
+++ b/src/main/resources/static/css/Estilos.css
@@ -52,3 +52,41 @@ p:nth-child(odd){
 p:nth-child(even){
     backgroud-color: cadetblue;
 }
+
+/*
+//****************************************************
+*/
+
+#barraLateral {
+    position: absolute;
+    height: 81%;
+    top: 13%;
+    left: 0;
+    width: 20%;
+    background-color: burlywood;
+     padding: 10px;
+}
+
+#contenido {
+    position: absolute;
+    height: 81%;
+    top: 12%;
+    left: 20%;
+    width: 80%;
+    backgroud-color: gainsboro;
+    padding: 10px;
+    
+}
+
+#piePagina {
+    position: absolute;
+    height: 7%;
+    bottom: 0%;
+    left: 0%;
+    width: 100%;
+    backgroud-color: aqua;
+    text-align: center;
+    padding-top: 25px;
+    
+        
+}
