--- a/src/main/resources/templates/categoria/fragmentosCategoria.html
+++ b/src/main/resources/templates/categoria/fragmentosCategoria.html
@@ -62,7 +62,7 @@
             </div>
         </section>
 
-        <!-- 3 Sección principal para mostrar la informaccion de la entidad categoria -->
+        <!-- 3 Sección principal para mostrar la informaccion de la entidad caategoria -->
         <section th:fragment="listadoCategorias" id="categorias">
             <div class="container">
                 <div class="row">
